# MasterAI-2.0-1vs1-NoLimit

./: .gitignore  README.md  chaos_brain_client.py  chaos_brain_message.py  chaos_brain_server.py  deploy.sh  kill_all.sh  main.py  publish.sh  pytest.init  run.py  serve.sh  train.sh  train_debug.sh
bak/mp/: train.sh
bak/mp/cfv/: selfplay.py
bak/mp/game/: recursive_solving.py
bak/mp/rela/: __init__.py  context.py  data_loop.py  model_locker.py  process_loop.py  (+1 more)
bak/thread/: train.sh
cfv/: models.py  selfplay.py  tasks.py  utils.py
conf/: dtypes.py
conf/c02_selfplay/: hunl_sp.yaml  hunl_sp_debug.yaml
conf/deploy/: rebel.yaml
conf/supervised_strategy/: hunl_sv.yaml  hunl_sv_debug.yaml
csrc/: CMakeLists.txt  build.sh  pybind.cpp  pybind_test.py
csrc/mc/: cards.cpp  cards.h  samples.cpp  samples.h  simulator.cpp  simulator.h  tables.cpp  tables.h  tools.cpp  tools.h
game/: net.py  real_net.py  recursive_solving.py  stats.py  subgame_solving.py  tree.py  utils.py
game/texas_holdem/: texas_holdem_hunl.py  utils.py
heyhi/: __init__.py
ipc/: broker.py  client.py  config.py  worker.py
proto/: alg.proto  alg_pb2.py  run.bat
rela/: bind.py  context.py  data_loop.py  model_locker.py  prioritized_replay.py  process_loop.py  types.py
robot/: conf.py  utils.py
robot/gto_mc/: bot.py  poker.py
robot/rebel/: bot.py  solver.py
supervised_strategy/: dataset.py  models.py
tests/game/: bfstree_test.py.bak  subgame_solving_test.py  tree_test.py  util_test.py
tests/rela/: contex_test.py  data_loop_test.py  prioritized_replay_test.py
utils/: daemon.py
(+20 files in other folders)
